Simple dialog system 1. Space-based intent exchange 2. Improved naive intent classifier 3. Added naive character classifier 4. Added perceptron and perceptron character classifier 5. Changed "say something" command to use special list 6. Added dialog debug form 7. Refactoring 8. Updated phrases